--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,17 @@
 }
 
 #canvasContainer {
-    align: center;
+    display: flex;
+    justify-content: center;
     width: 100%;
+}
+
+.tool-pallette{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.pixel-list{
+    
 }
