--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    margin-top: 5px;
 }
 
 .tool-pallette{
@@ -28,4 +29,8 @@
 
 .pixel-list{
     
+}
+
+h1{
+    text-align: center;
 }
